app/static/css/custom.css
/* ... */
body {
    color: #161310;
}
hr {
    border-color: #ff9900;
}
small {
    color: #e5e5e5;
}

/* Links 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
a {
    color: #3299bb;
}
a:hover {
    color: #1eaeda;
}

/* Alerts 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.flash {
    display: block;
    border: 1px solid;
    border-radius: 4px;
    padding: 15px;
    margin-bottom: 20px;
    animation: slide-down 0.3s cubic-bezier(.22,.61,.36,1) forwards;
    border-color: #e5e5e5;
    color: #524535;
    /*animation: fade-in 0.5s;*/
}
.label,
.help-block {
    display: inline;
    padding: 0.2em 0.6em 0.3em;
    font-size: 75%;
    font-weight: 300;
    line-height: 1;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: 0.25em;
}
.primary {
    background-color: #3299bb;
    border-color: #3299bb;
}
.success,
.good {
    color: #fff;
    background-color: #274D28;
    border-color: #274D28;
}
.warning,
.unknown {
    color: #fff;
    background-color: #604b29;
    border-color: #604b29;   
}
.danger,
.bad,
.error {
    color: #fff;
    background-color: #652A28;
    border-color: #652A28;
}


/* Images
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.img-circle {
    border-radius: 50%; 
} 
.avatar-sm {
    border-radius: 33%;
    display:inline-block;
    vertical-align: middle;
    width:32px; 
    height:32px; 
    background-color:#ccc; 
    color: #fff;
    font-weight: 600;
    text-align: center;
    line-height: 2.1em;
    text-decoration: none;
}
.icon {
    width: 1em;
    height: 1em;
    vertical-align: middle;
}
.icon-social {
    width:2em;
    height:2em;
}
.icon-demand {
    height: 32px;
    margin-top: 7px;
}
.icon-comment {
    height: 16px;
    margin-top: 12px;
    margin-right: 14px;
}

    
/* Layout 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.header {
    display: block;
    position: fixed;
    top: 0px;
    z-index: 100;
    width: 100%;
    height: 6.5rem;
    background: #fbfaf9;
    border-bottom: 1px solid #ff9900;
}
.full-width-container {
    padding: 0 9rem;
}
.progress {
    display: block;
    height: 6.5rem;
    border-bottom: 2px solid #33C3F0;
    transition: width 0.5s ease-out;
}
.header .logo {
    width: 5rem;
    height: 5rem;
    margin: 0.7rem 1rem 0 0;
}
.header .title,
.header .button {
    margin-top: 1.2rem;
}
.header .user {
    margin: 1.3em 1em 0 0;
    float: right;
}
.header .user a {
    font-weight: bold;
    text-decoration: none;
}
.content {
    /*margin-top: 9rem;*/
}
.masthead {
    background-size: cover;
    padding: 9rem 0;
    height: 24vw;
}
.masthead-title {
    padding: 0 9rem;
    margin-top: 24vw;
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
}
.masthead h1 {
    font-size: 5rem;
    margin-top: 3rem;
    margin-bottom:0;
    color: #fbfaf9;
}
@media (min-width: 750px) {
    .masthead h1 {
        font-size: 7.5rem;
        margin-top: 0;
        margin-bottom:0;
        color: #fbfaf9;
    }
}
.support-action {
    display: block;
    border: 1px solid #bbb;
    border-radius: 4px;
    margin-top: 1em;
    padding: 0.5em 1em;
    color: #555;
    text-decoration: none;
}
.support-action:hover {
    border-color: #888;
    color: #333;
    cursor: pointer;
}
h2 span {
    font-size: 50%;
}
.support-action p {
    font-size: 12px;
}
.post article h1, .comment article h1, 
.post article h2, .comment article h2,
.post article h3, .comment article h3,
.post article h4, .comment article h4 {
    font-weight: bold;
    font-size: larger;
}
.footer {
    display: block;
    width: 100%;
    margin-top: 3rem;
    padding: 3rem 0;
    background: #161310;
    color: #fff;
}
.footer a {
    text-decoration: none;
}
.footer a:hover {
    text-decoration: underline;
}
.footer ul li {
    list-style-type: none;
}


/* Navigation 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
#scrollspy {
    display: inline-block;
}
.nav-tabs-container {
    border-bottom: 1px solid #e5e5e5;
    margin-bottom: 1em;
}
.nav-stacked-fixed {
    position: fixed;
    top: 6em;
}
.nav {
    padding-left: 0;
    margin-bottom: 0;
    margin-left: 0;
    list-style: none;
    display: inline-block;
}
.nav > li {
    position: relative;
    display: block;
}
.nav > li > a {
    position: relative;
    display: block;
    padding: 10px 10px;
}
.nav > li > a:hover,
.nav > li > a:focus {
    text-decoration: none;
    background-color: #fbfaf9;
}
.nav > li.disabled > a {
    color: #524535;
}
.nav > li.disabled > a:hover,
.nav > li.disabled > a:focus {
    color: #524535;
    text-decoration: none;
    cursor: not-allowed;
    background-color: transparent;
}
.nav-stacked {
    width: 100%;
}
.nav-tabs > li {
    float: left;
    margin-bottom: -3px;
}
.nav-tabs > li > a {
    line-height: 2.8;
    height: 4.5rem;
    text-decoration: none;
}

.nav-stacked > li > a {
    line-height: 1.8;
    height: 2.5rem;
    text-decoration: none;
}
.nav-tabs > li > a:hover
.nav-stacked > li > a:hover {
    color: #fbfaf9;
}
.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover,
.nav-tabs > li.active > a:focus {
    font-weight: 600;
    text-decoration: underline;
}
@media (min-width: 1000px) {
    .nav-tabs > li.active > a,
    .nav-tabs > li.active > a:hover,
    .nav-tabs > li.active > a:focus {
        text-decoration: none;
        border-bottom-style: solid;
        border-bottom-color: #3299bb;
        border-radius: 3px;
    }
}
.nav-stacked > li.active > a,
.nav-stacked > li.active > a:hover,
.nav-stacked > li.active > a:focus {
    font-weight: 600;
    margin-right: 0;
    margin-left: 0;
    background-color: #fff;
    border-left-style: solid;
    border-left-color: #3299bb;
}
/* ... */

